[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qf-variants"
version = "1.0"
dependencies = [
  "pandas",
  "itertools"
]
requires-python = ">=3.0"
authors = [
  {name = "Joel Miller", email = "joeldmiller73@gmail.com"}
]

description = "Plural QF in python"
readme = "README.md"
license = {file = "COPYING.txt"}
